fix scrolling
before overflow was always hidden, breaking long pages.

now the header is fixed and the content below is always allowed to scroll when the content overflows

--- a/dispatch/static/manager/src/styles/utilities/_containers.scss
+++ b/dispatch/static/manager/src/styles/utilities/_containers.scss
@@ -37,3 +37,7 @@
 .u-container--align-left {
   padding-left: 2rem;
 }
+
+.u-container-vertical-scroll {
+  overflow-y: auto;
+}
